2009-11-13  Mikhail Naganov  <mnaganov@chromium.org>

        Reviewed by Timothy Hatcher.

        Enable 'console.profile()' and 'console.profileEnd()'
        regardless of JAVASCRIPT_DEBUGGER.

        https://bugs.webkit.org/show_bug.cgi?id=31293

        * WebCore.gypi:
        * bindings/js/JSConsoleCustom.cpp:
        (WebCore::JSConsole::profile):
        (WebCore::JSConsole::profileEnd):
        * bindings/v8/custom/V8ConsoleCustom.cpp: Added.
        (WebCore::CALLBACK_FUNC_DECL):
        * bindings/v8/custom/V8CustomBinding.h:
        * page/Console.idl:

2009-11-12  David Levin  <levin@chromium.org>

        Reviewed by NOBODY.

        Chromium build fix.

        * bindings/v8/ScriptController.h:
        (WebCore::ScriptController::evaluateInWorld): Add a dummy
         method which isn't called in chromium to make things compile.

2009-11-12  Anantanarayanan G Iyengar  <ananta@chromium.org>

        Reviewed by Adam Barth.
        
        The document-open.html test was flaky at times. The test invokes the layout test plugin
        which in its destroy stream handler opens a new document. This basically tears down the
        stream and the associated plugin instance, which causes a crash when the plugin stream
        dereferences an invalid m_client pointer which points to the PluginView instance which
        is invalid at this time. Fix is to set the m_client pointer to NULL in the stop function
        and check for the same.
       
        https://bugs.webkit.org/show_bug.cgi?id=31067

        * plugins/PluginStream.cpp:
        (WebCore::PluginStream::stop):
        (WebCore::PluginStream::destroyStream):

2009-11-12  Dumitru Daniliuc  <dumi@chromium.org>

        Reviewed by Dimitri Glazkov.

        Renaming some parameters passed to DB-related methods to better
        indicate their purpose.

        https://bugs.webkit.org/show_bug.cgi?id=31449

        * platform/chromium/ChromiumBridge.h:
